# zhiyao-platform

./: CMakeLists.txt  README.md
backend/: .gitignore  init-db.js  package-lock.json  package.json  server.js
data/: drugs.json  interactions.json
frontend/: app.js  index.html  style.css
src/: Drug.h  KnowledgeBase.h  User.h  main.cpp
